--- a/_posts/2018_05_11.md
+++ b/_posts/2018_05_11.md
@@ -1,8 +1,8 @@
 ---
-layout: news
+layout: default
 title: 테스트하는 겁니다~
 meta: 어떤식으로 나오는지 확인해야해서 봐야겠습니다.
-category: news
+category: categories
 ---
 
 
